Text readabiltiy fixes

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -131,6 +131,7 @@ div.services-thumbnail:hover .overlay {
   box-sizing: border-box;
   padding: 1em;
   color: #FFFFFF;
+  text-align: center;
 
   /* All other styling - see example */
   img {
